extensions/wikia/Venus/styles/article/infobox.scss
@import 'extensions/wikia/Venus/styles/variables';
@import 'extensions/wikia/Venus/styles/mixins';
@import 'extensions/wikia/Venus/styles/typographyMixins';
@import 'skins/shared/mixins/calc';

.infobox-container {
	@include grid-column-width('medium', 4, -2 * $medium-grid-column-padding);
	display: block;
	float: right;
	margin: 0 (-$medium-grid-column-padding - $medium-grid-gutter - $medium-grid-column) 30px $medium-grid-gutter + $medium-grid-column-padding;
	text-align: center;

	.infobox-wrapper {
		display: inline-block;
		position: relative;

		&.collapsed-infobox {
			height: 740px;
			overflow: hidden;
			position: relative;
		}
	}

	table, div {
		@include grid-column-max-width('medium', 4, -2 * $medium-grid-column-padding);
		float: none;
		margin: 0 auto;
	}

	.image-thumbnail img {
		height: auto;
		margin: 0;
		max-width: 100%;
	}

	.see-more {
		@include font-size-xxs;
		border-top: 1px solid $color-page-border;
		bottom: 0;
		color: $color-links;
		cursor: pointer;
		display: block;
		font-weight: bold;
		height: 40px;
		left: 0;
		margin: auto;
		padding-top: 2px;
		position: absolute;
		right: 0;
		text-align: center;
		text-transform: uppercase;
		width: 100%;

		&.hide {
			display: none;
		}

		&:hover {
			text-decoration: none;
		}
	}
}

@media #{$large-up} {
	.infobox-container {
		@include grid-column-width('large', 4, -2 * $large-grid-column-padding);
		margin-left: $large-grid-gutter + $large-grid-column-padding;
		margin-right: -$large-grid-column-padding - $large-grid-gutter - $large-grid-column;

		table, div {
			@include grid-column-max-width('large', 4, -2 * $large-grid-column-padding);
		}
	}
}

@media #{$small-only} {
	.infobox-container {
		@include grid-column-width('small', 5);
		margin-left: $small-grid-gutter + $small-grid-column-padding;
		margin-right: -$small-grid-column-padding;

		table, div {
			@include grid-column-max-width('small', 5);
		}
	}
}

